# vibrantcli

./: .gitignore  LICENSE.md  README.md  pyproject.toml  sample.py
src/mantis_colors/: fg.py
src/vibrant/: __init__.py  bg.py  style.py  windows.py
src/vibrantcli/: autoreset.py
